# tpu_performance_autoresearch_wiki

./: .gitignore  AGENTS.md  GEMINI.md  README.md  SCHEMA.md  log.txt  sample-program.md  scratch_report.yaml  wait_for_jobset.sh
wiki/experiments/qwen3_ag_autoresearch_optimization/jax/ejkernel/: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  pyproject.toml
wiki/experiments/qwen3_ag_autoresearch_optimization/jax/ejkernel/benchmarks/: _op_benchmark_registry.py  benchmark_attention.py  benchmark_blocksparse_attention.py  benchmark_chunked_prefill_paged_decode.py  benchmark_dequantize.py  benchmark_flash_attention_cuda.py  benchmark_gated_delta_rule.py  benchmark_gla_attention.py  benchmark_kernel_delta_attention.py  benchmark_lightning_attention.py  benchmark_native_sparse_attention.py  benchmark_page_attention.py  benchmark_qmm_tpu_pallas_vs_xla.py  benchmark_qmm_tpu_strategy_sweep.py  benchmark_quantize.py  benchmark_quantized_matmul.py  benchmark_quantized_matmul_cute_vs_cuda.py  benchmark_ragged_page_attention_v2.py  benchmark_ragged_page_attention_v3.py  benchmark_rwkv4.py  benchmark_scaled_dot_product_attention.py  benchmark_state_space_v1.py  benchmark_unified_attention.py  qmm_perf_gate.py
wiki/experiments/qwen3_ag_autoresearch_optimization/jax/ejkernel/benchmarks/baselines/: dequantize_tpu.json  quantize_tpu.json
wiki/experiments/qwen3_ag_autoresearch_optimization/jax/ejkernel/csrc/blocksparse_attention/src/: blocksparse_attention.h  blocksparse_attention_ffi.cu  blocksparse_attention_launch_template.h  blocksparse_fwd_hdim192_vhdim192_fp16_sm80.cu  blocksparse_fwd_hdim256_vhdim256_bf16_sm100.cu  blocksparse_fwd_hdim32_vhdim32_bf16_sm110.cu  blocksparse_fwd_hdim96_vhdim96_bf16_sm80.cu  code_gen.py
wiki/experiments/qwen3_ag_autoresearch_optimization/jax/ejkernel/csrc/flash_attention/: CMakeLists.txt
wiki/experiments/qwen3_ag_autoresearch_optimization/jax/ejkernel/csrc/flash_attention/hopper/: block.h  flash.h  flash_api.cpp  flash_api_stable.cpp  flash_bwd_kernel_sm80.h  flash_bwd_launch_template.h  flash_bwd_preprocess_kernel.h  flash_fwd_combine_kernel.h  flash_fwd_combine_launch_template.h  flash_fwd_kernel_sm90.h  flash_fwd_launch_template.h  flash_prepare_scheduler.cu  heuristics.h  mainloop_bwd_sm90_tma_gmma_ws.hpp  mainloop_fwd_sm80.hpp  pack_gqa.h  rotary.h  seqlen.h  sm90_pipeline_no_cluster.hpp  softmax.h  static_switch.h  tile_scheduler.hpp  tile_size.h
wiki/experiments/qwen3_ag_autoresearch_optimization/jax/ejkernel/csrc/flash_attention/include/: ejkernel_flash_attention.h  ejkernel_flash_attention_cutlass.h
wiki/experiments/qwen3_ag_autoresearch_optimization/jax/ejkernel/csrc/flash_attention/src/: alibi.h  aten_shim.h  flash_attention_ffi.cu  flash_bwd_hdim128_bf16_causal_sm90.cu  flash_bwd_hdim128_bf16_sm80.cu  flash_bwd_hdim192_bf16_sm100.cu  (+36 more)
wiki/experiments/qwen3_ag_autoresearch_optimization/jax/ejkernel/csrc/quantized_matmul/: CMakeLists.txt
wiki/experiments/qwen3_ag_autoresearch_optimization/jax/ejkernel/csrc/unified_attention/: CMakeLists.txt
wiki/experiments/qwen3_ag_autoresearch_optimization/jax/ejkernel/docs/: README.md  comprehensive_architecture_report.md  install.md  kernel_registry_system.md  module_operations.md  requirements.txt
wiki/experiments/qwen3_ag_autoresearch_optimization/jax/ejkernel/docs/api/: modules.md  types.md
wiki/experiments/qwen3_ag_autoresearch_optimization/jax/ejkernel/docs/api_docs/: benchmarks.rst  build_cudalib.rst  errors.rst  utils.rst
wiki/experiments/qwen3_ag_autoresearch_optimization/jax/ejkernel/ejkernel/: README.md  loggings.py  test_nsa_compile.py
wiki/experiments/qwen3_ag_autoresearch_optimization/jax/ejkernel/ejkernel/benchmarks/: benchmark_apply_native_sparse_attention.py  benchmark_decode_attention.py  benchmark_flash_attention.py  benchmark_gated_delta_rule_plot.py  benchmark_grouped_matmul.py  benchmark_grouped_matmulv2.py  benchmark_mean_pooling.py  benchmark_prefill_page_attention.py  benchmark_qmm_llm.py  benchmark_ragged_decode_attention.py  benchmark_recurrent_attention.py  benchmark_ring_attention.py  benchmark_rwkv6.py  benchmark_rwkv7.py  benchmark_rwkv7_mul.py  benchmark_state_space_v2.py  quant_perf_gate.py
wiki/experiments/qwen3_ag_autoresearch_optimization/jax/ejkernel/ejkernel/callib/: _cute_ffi.py  _triton_call.py
wiki/experiments/qwen3_ag_autoresearch_optimization/jax/ejkernel/ejkernel/csrc/: code_gen.py
wiki/experiments/qwen3_ag_autoresearch_optimization/jax/ejkernel/ejkernel/docs/: conf.py  contributing.rst  index.rst  kernel_implementations.md  maskinfo_guide.md  ops_system_architecture.md  project_overview.md  test_suite_and_examples.md  utilities_and_helpers.md
wiki/experiments/qwen3_ag_autoresearch_optimization/jax/ejkernel/ejkernel/ejkernel/: __init__.py  benchmarks.py  build_cudalib.py  errors.py  utils.py
wiki/experiments/qwen3_ag_autoresearch_optimization/jax/ejkernel/ejkernel/kernels/: __init__.py
wiki/experiments/qwen3_ag_autoresearch_optimization/jax/ejkernel/ejkernel/modules/: __init__.py
wiki/experiments/qwen3_ag_autoresearch_optimization/jax/ejkernel/ejkernel/test/: __init__.py  conftest.py  test_platform_specific_ops.py  xla_utils.py
wiki/experiments/qwen3_ag_autoresearch_optimization/jax/ejkernel/ejkernel/types/: __init__.py
wiki/experiments/qwen3_ag_autoresearch_optimization/jax/ejkernel/ejkernel/xla_utils/: cumsum.py  shardings.py
wiki/experiments/qwen3_ag_autoresearch_optimization/jax/ejkernel/scripts/: format_and_generate_docs.py
wiki/experiments/qwen3_ag_autoresearch_optimization/jax/ejkernel/test/: run_tests.py  test_import_backend_init.py  test_optional_triton.py
wiki/experiments/qwen3_ag_autoresearch_optimization/jax/ejkernel/test/callib/: test_triton_call_cache.py
wiki/experiments/qwen3_ag_autoresearch_optimization/jax/ejkernel/test/kernels/: __init__.py  test_grouped_matmulv3_parity.py  test_multi_latent_ragged_page_attention_parity.py  test_multi_latent_ragged_page_attention_v2_parity.py  test_ring_attention_parity.py
wiki/experiments/qwen3_ag_autoresearch_optimization/jax/ejkernel/test/types/: test_mask_info.py
(+2671 files in other folders)
